@@ -403,7 +403,8 @@ isIncomplete(con)
   Encoding names \code{"utf8"}, \code{"mac"} and \code{"macroman"} are
   not portable, and not supported on all current \R platforms.
   \code{"UTF-8"} is portable and \code{"macintosh"} is the official
-  (and most widely supported) name for \sQuote{Mac Roman}.
+  (and most widely supported) name for \sQuote{Mac Roman}.  (As from \R
+  3.4.0, \R maps \code{"utf8"} to \code{"UTF-8"} internally.)
 
   Requesting a conversion that is not supported is an error, reported
   when the connection is opened.  Exactly what happens when the
